# RyanPlayerFFmpeg

./: settings.gradle
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  PlayerControllerNative.cpp
app/src/main/cpp/common/: CommonTools.h
app/src/main/cpp/common/egl_core/: egl_core.cpp
app/src/main/cpp/common/opengl_media/: movie_frame.h
app/src/main/cpp/common/opengl_media/render/: video_gl_surface_render.cpp
app/src/main/cpp/common/opengl_media/texture/: yuv_texture_frame.cpp
app/src/main/cpp/video_player/: video_output.cpp  video_output.h  video_player_controller.cpp  video_player_controller.h
app/src/main/cpp/video_player/decoder/: decoder_request_header.h  ffmpeg_video_decoder.cpp  video_decoder.cpp  video_decoder.h
app/src/main/cpp/video_player/sync/: av_synchronizer.cpp  av_synchronizer.h
app/src/main/cpp/video_player/texture_uploader/: texture_frame_uploader.cpp  texture_frame_uploader.h
app/src/main/java/com/ryan/playerffmpeg/: MainActivity.java  MainApplication.java
app/src/main/java/com/ryan/playerffmpeg/base/: BaseActivity.java
app/src/main/java/com/ryan/playerffmpeg/player/: OnInitializedCallback.java  OnStoppedCallback.java  PlayerController.java
app/src/main/java/com/ryan/playerffmpeg/utils/: Logger.java  PermissionsUtils.java  SystemUtils.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
gradle/wrapper/: gradle-wrapper.properties
